# vboo

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: and.rs  and_vs_or.rs  and_vs_or_iai.rs  op_vs_op.rs
resources/: doc.npy  doc_term_matrix.npy  query.npy
src/: main.rs
src/ranking/: mod.rs  op.rs  rank.rs  rank_result.rs  scorer.rs  simd_sandbox.rs
