[package]
name = "vboo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.9.0"
html_parser = "0.6.3"
webpage = "1.4.0"
structopt = "0.3"
rust-stemmers = "^1.0"
ndarray = "0.15"
