[package]
name = "vboo"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[profile.bench]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.9.0"
html_parser = "0.6.3"
webpage = "1.4.0"
structopt = "0.3"
rust-stemmers = "^1.0"
ndarray = { version = "0.15", features = ["rayon", "blas"] }
ndarray-npy = "0.8"
ndarray-rand = "0.14"
blas-src = { version = "0.8", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
rayon = "1.5"
fastapprox = "0.3.0"
packed_simd = { version = "0.3.6", package = "packed_simd_2" }
kendalls = "0.1.5"
colored = "2.0.0"

[dev-dependencies]
criterion = "0.3"
iai = "0.1"
lazy_static = "1.4.0"

[[bench]]
name = "and_vs_or"
harness = false

[[bench]]
name = "and_vs_or_iai"
harness = false
